# camlcards

./: Makefile  README.md  camlcards.opam  dune-project
lib/: card.ml  deck.ml  dune  game_setup.ml  hand.ml  list_utils.ml  play.ml  settings.ml  string_utils.ml
lib/games/: blackjack.ml  dune  war.ml
