(lang dune 3.9)

(name camlcards)

(generate_opam_files true)

(source
 (github CharlesAverill/camlcards))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license LICENSE)

(documentation https://github.com/CharlesAverill/camlcards)

(package
 (name camlcards)
 (synopsis "A card game engine")
 (description "A card game engine")
 (depends ocaml dune uutf))

